# pi-pico-firmware

./: README.md
armbot/: Cargo.toml
armbot/.cargo/: config.toml
armbot/simulation/: diagram.json  wokwi.toml
armbot/src/: main.rs
blinky/: Cargo.toml
blinky/simulation/: diagram.json  pi-pico-blinky.uf2  wokwi.toml
blinky/src/: main.rs
servo/: Cargo.toml
servo/.cargo/: config.toml
servo/simulation/: diagram.json  pi-pico-servo.uf2  wokwi.toml
servo/src/: main.rs
wifi/: Cargo.toml
wifi/.cargo/: config.toml
wifi/cyw43-firmware/: README.md
wifi/server/: hello_tcp.py  hello_udp.py
wifi/src/: main.rs  wifi_blinky.rs  wifi_tcp_udp.rs
