[package]
edition = "2021"
name = "pi-pico-w-armbot"
version = "0.1.0"
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
## Embassy
embassy-embedded-hal = { version = "0.2.0", path = "../embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-sync = { version = "0.6.0", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.6.0", path = "../embassy/embassy-executor", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0", path = "../embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-net = { version = "0.4.0", path = "../embassy/embassy-net", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
cyw43 = { version = "0.2.0", path = "../embassy/cyw43", features = ["defmt", "firmware-logs", "bluetooth"] }
cyw43-pio = { version = "0.2.0", path = "../embassy/cyw43-pio", features = ["defmt"] }

cortex-m = {version = "0.7", features = ["inline-asm"]}
cortex-m-rt = "0.7"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
critical-section = "1.1"
embedded-io-async = { version = "0.6.1", default-features = false, features = ["defmt-03"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
fixed = "1.23.1"
fixed-macro = "1.2"

portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"

rand = { version = "0.8.5", default-features = false }
static_cell = { version = "2" }

rust-mqtt = {version = "0.3.0", default-features = false, features = ["defmt"]}
heapless = "0.8"


[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[[bin]]
name = "pi-pico-w-armbot"
path = "src/main.rs"