[package]
edition = "2021"
name = "pi-pico-blinky"
version = "0.1.1"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}
cortex-m-rt = "0.7"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
critical-section = "1.1"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

## Embassy
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "task-arena-size-32768"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }

embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }

## need these for pio
pio-proc = "0.2.2"
pio = "0.2.1"

## USB + logging via USB support (note: embassy-usb-logger requires portable-atomic with critical-section feature enabled)
embassy-usb-driver = { version = "0.1.0", features = ["defmt"] }
embassy-usb-logger = { version = "0.2.0" }
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"

## pico-w support
static_cell = { version = "2" }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"


[[bin]]
name = "pi-pico-blinky"
path = "src/main.rs"